# Ntripcaster-docker

./: Dockerfile  README.md  config.sh  docker-build.yml  ntripcaster-2.0.46.tar.bz2  ntripcaster-2.0.47.tar.bz2  ntripcaster-2.0.48.tar.bz2  ntripcaster-2.0.49.tar.bz2
ntripcaster/: CHANGES  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  ntripcaster.spec  ntripcaster_manual.html
ntripcaster/conf/: Makefile.in  clientmounts.aut.dist  ntripcaster.conf.dist  ntripcaster.conf.dist.in  sourcemounts.aut.dist  sourcetable.dat.dist
ntripcaster/scripts/: Makefile.am  Makefile.in  casterwatch  casterwatch.in  ntripcaster  ntripcaster.in  ntripcaster.service  ntripcaster.service.in  rcscript  rcscript_debian
ntripcaster/src/: admin.c  admin.h  alias.c  avl.c  avl.h  avl_functions.c  avl_functions.h  client.c  client.h  commandline.c  commandline.h  commands.c  commands.h  connection.c  connection.h  definitions.h  http.c  http.h  interpreter.c  interpreter.h  item.c  log.c  logtime.c  main.h  match.c  match.h  memory.c  ntrip.c  ntrip.h  ntripcaster.h  ntripcaster_resolv.c  ntripcaster_string.c  ntripcaster_string.h  ntripcastertypes.h  parser.h  pool.c  pool.h  relay.c  restrict.c  restrict.h  (+19 more)
ntripcaster/src/authenticate/: Makefile.in  basic.c  basic.h  ldapAuthenticate.c  mount.c  user.c  user.h
ntripcaster/src/src/: Makefile.am  Makefile.in  alias.h  client.c  commands.c  connection.c  http.c  (+16 more)
ntripcaster/templates/: 306.html  Makefile.am  Makefile.in  admin.html  alias_del.html  header.html  home.html  robots.txt  statistics.html  style.html
(+10 files in other folders)
